お気に入り登録を非同期に

--- a/src/.env.example
+++ b/src/.env.example
@@ -37,10 +37,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID="AKIA6KZLCE777CHIFV43"
-AWS_SECRET_ACCESS_KEY="QRstkcUEc/up5K0gRT4ZNvxpASD2/60vqB9UAchr"
-AWS_DEFAULT_REGION="ap-northeast-1"
-AWS_BUCKET='review-app-packet'
+AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID}"
+AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}"
+AWS_DEFAULT_REGION="${AWS_DEFAULT_REGION}"
+AWS_BUCKET="${AWS_BUCKET}"
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
