--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "diglactic/laravel-breadcrumbs": "^8.1",
+        "fakerphp/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
